After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746274 - flvdemux: Less spam from no_more_pads warning
flvdemux: Less spam from no_more_pads warning
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-16 10:11 UTC by Jan Alexander Steffens (heftig)
Modified: 2015-03-16 12:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch 1/2 (833 bytes, patch)
2015-03-16 10:12 UTC, Jan Alexander Steffens (heftig)
committed Details | Review
patch 2/2 (2.09 KB, patch)
2015-03-16 10:12 UTC, Jan Alexander Steffens (heftig)
none Details | Review
patch 2/2 (2.40 KB, patch)
2015-03-16 10:22 UTC, Jan Alexander Steffens (heftig)
none Details | Review
Makes the threshold a #define (1.90 KB, patch)
2015-03-16 10:25 UTC, Jan Alexander Steffens (heftig)
committed Details | Review
patch 2/2 (2.57 KB, patch)
2015-03-16 11:30 UTC, Jan Alexander Steffens (heftig)
committed Details | Review

Description Jan Alexander Steffens (heftig) 2015-03-16 10:11:34 UTC
These warnings can get rather spammy for such a high log level.

Patches follow.
Comment 1 Jan Alexander Steffens (heftig) 2015-03-16 10:12:40 UTC
Created attachment 299494 [details] [review]
patch 1/2
Comment 2 Jan Alexander Steffens (heftig) 2015-03-16 10:12:56 UTC
Created attachment 299495 [details] [review]
patch 2/2
Comment 3 Jan Alexander Steffens (heftig) 2015-03-16 10:15:04 UTC
Aah, wrong patch 2. One moment, please.
Comment 4 Jan Alexander Steffens (heftig) 2015-03-16 10:22:08 UTC
Created attachment 299496 [details] [review]
patch 2/2
Comment 5 Jan Alexander Steffens (heftig) 2015-03-16 10:25:06 UTC
Created attachment 299497 [details] [review]
Makes the threshold a #define
Comment 6 Nicolas Dufresne (ndufresne) 2015-03-16 10:43:36 UTC
Review of attachment 299494 [details] [review]:

Good.
Comment 7 Nicolas Dufresne (ndufresne) 2015-03-16 10:47:01 UTC
Review of attachment 299496 [details] [review]:

Looks good except for these small details. Though, I'm wondering why is this a warning is the first place ? Can't an FLV be audio or video only ?

::: gst/flv/gstflvdemux.c
@@ +925,3 @@
   GST_LOG_OBJECT (demux, "parsing an audio tag");
 
+  if G_UNLIKELY (!demux->audio_pad && demux->no_more_pads) {

Add ifndef GST_DISABLE_DEBUG here, so we don't have this if if there is not debug.

@@ +1328,3 @@
   GST_LOG_OBJECT (demux, "parsing a video tag");
 
+  if G_UNLIKELY (!demux->video_pad && demux->no_more_pads) {

same.
Comment 8 Nicolas Dufresne (ndufresne) 2015-03-16 10:48:23 UTC
Review of attachment 299497 [details] [review]:

Yeah, that cleaner. I think I kind of found the answer of my question in the previous comment.
Comment 9 Jan Alexander Steffens (heftig) 2015-03-16 11:30:18 UTC
Created attachment 299499 [details] [review]
patch 2/2
Comment 10 Nicolas Dufresne (ndufresne) 2015-03-16 11:36:05 UTC
Review of attachment 299499 [details] [review]:

Good.
Comment 11 Nicolas Dufresne (ndufresne) 2015-03-16 12:03:19 UTC
Thanks for the patches.
Comment 12 Nicolas Dufresne (ndufresne) 2015-03-16 12:04:20 UTC
Comment on attachment 299494 [details] [review]
patch 1/2

commit f2a1f74cecbe20688bf72d627c5ec0fe0534324e
Author: Jan Alexander Steffens (heftig) <jsteffens@make.tv>
Date:   Tue Jan 20 10:18:29 2015 +0100

    flvdemux: Fix warning to contain 'video'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746274
Comment 13 Nicolas Dufresne (ndufresne) 2015-03-16 12:04:35 UTC
Comment on attachment 299497 [details] [review]
Makes the threshold a #define

commit ac8a27238145f64eabf89f6ab94b0a65fdc56e18
Author: Jan Alexander Steffens (heftig) <jsteffens@make.tv>
Date:   Mon Mar 16 11:23:52 2015 +0100

    flvdemux: Introduce constant for no-more-pads threshold
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746274
Comment 14 Nicolas Dufresne (ndufresne) 2015-03-16 12:04:51 UTC
Comment on attachment 299499 [details] [review]
patch 2/2

commit be8e3196a3e236c4f668d761138e3119dc68f0ce
Author: Jan Alexander Steffens (heftig) <jsteffens@make.tv>
Date:   Tue Jan 20 10:18:56 2015 +0100

    flvdemux: Don't repeatedly warn after no_more_pads (v2)
    
    This can get rather spammy for such a high log level.
    Only warn once per stream.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746274