flvdemux: Fix warning to contain 'video'

https://bugzilla.gnome.org/show_bug.cgi?id=746274